# lab07-files-serialization-steveMadrigal

./: CMakeLists.txt
src/: CMakeLists.txt  Persona.cpp  Persona.h  ServicioPersonasConPersistencia.cpp  ServicioPersonasConPersistencia.h  VectorPersonas.cpp  VectorPersonas.h  XMLSerialization.cpp  XMLSerialization.h  main.cpp  tinyxml2.h
tst/: CMakeLists.txt
